--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
 	<!-- spacing css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/rs-spacing.css">
 	<!-- style css -->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style copy.css">
 	<!-- This stylesheet dynamically changed from style.less -->
 	<!-- responsive css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
@@ -68,8 +68,8 @@
 							<div class="col-cell header-logo">
 								<div class="logo-area">
 									<a href="index.html">
-										<img class="normal-logo" src="assets/images/medscred white.png" alt="logo">
-										<img class="sticky-logo" src="assets/images/medscred blue.png" alt="logo">
+										<img class="normal-logo" src="assets/images/logo/logo.png" alt="logo">
+										<img class="sticky-logo" src="assets/images/logo/logo.png" alt="logo">
 									</a>
 								</div>
 							</div>
@@ -79,20 +79,20 @@
 										<nav class="rs-menu hidden-md">
 											<nav class="rs-menu hidden-md">
 												<ul class="nav-menu">
-													<li>
-														<a href="index.html" style="color:#fff;">Home</a>
+													<li class="current-menu-item">
+														<a href="index.html">Home</a>
 													</li>
 													<li class="">
-														<a href="about.html" style="color:#fff;">About</a>
+														<a href="about.html">About</a>
 													</li>
 													<li class="">
-														<a href="partners.html" style="color:#fff;">Partners</a>
+														<a href="partners.html">Partners</a>
 													</li>
 													<li class="">
-														<a href="customers.html" style="color:#fff;">Customers</a>
+														<a href="customers.html">Customers</a>
 													</li>
 													<li class="last-item">
-														<a href="contact.html" style="color:#fff;">Contact</a>
+														<a href="contact.html">Contact</a>
 													</li>
 												</ul> <!-- //.nav-menu -->
 											</nav> <!-- //.nav-menu -->
@@ -136,20 +136,76 @@
 						</a>
 					</div>
 					<ul class="nav-menu">
-						<li>
+						<li class="menu-item-has-children current-menu-item">
 							<a href="index.html">Home</a>
+							<ul class="sub-menu">
+								<li class="menu-item-has-children current-menu-item">
+									<a href="#">Demo Homepages</a>
+									<ul class="sub-menu">
+										<li><a href="index.html">SEO Tools</a></li>
+										<li><a href="index-2.html">Music Player Apps</a></li>
+										<li><a href="index-3.html">Cloud Computing</a></li>
+										<li><a href="index-4.html">Cyber Security</a></li>
+										<li class="active"><a href="index-5.html">Payment Solution</a></li>
+										<li><a href="index-6.html">HR Management</a></li>
+										<li><a href="index-7.html">Scheduling</a></li>
+										<li><a href="index-8.html">Ecommerce CRM Software</a></li>
+									</ul>
+								</li>
+								<li class="menu-item-has-children">
+									<a href="#">Demo Homepages</a>
+									<ul class="sub-menu">
+										<li><a href="index-9.html">Video Conference</a></li>
+										<li><a href="index-10.html">UI Kit Landing Page</a></li>
+										<li><a href="index-11.html">To-Do Apps</a></li>
+										<li><a href="index-12.html">Smart Home Apps</a></li>
+										<li><a href="index-13.html">Customer Support</a></li>
+										<li><a href="index-14.html">Video Editor Apps</a></li>
+										<li><a href="index-15.html">Wallet App</a></li>
+									</ul>
+								</li>
+							</ul>
 						</li>
-						<li class="">
-							<a href="about.html">About</a>
+						<li class="menu-item-has-children">
+							<a href="#">About</a>
+							<ul class="sub-menu">
+								<li><a href="about-1.html">About 1</a></li>
+								<li><a href="about-2.html">About 2</a></li>
+								<li><a href="about-3.html">About 3</a></li>
+							</ul>
 						</li>
-						<li class="">
-							<a href="partners.html">Partners</a>
+						<li class="menu-item-has-children">
+							<a href="#">Pages</a>
+							<ul class="sub-menu">
+								<li class="last-item menu-item-has-children">
+									<a href="#">Services</a>
+									<ul class="sub-menu">
+										<li><a href="services-1.html">Services 1</a></li>
+										<li><a href="services-2.html">Services 2</a></li>
+										<li><a href="services-details.html">Services Details</a></li>
+									</ul>
+								</li>
+								<li><a href="testimonial.html">Testimonial</a></li>
+								<li><a href="faqs.html">Faqs</a></li>
+								<li><a href="price-plan.html">Price Plan</a></li>
+								<li><a href="error-404.html">error 404</a></li>
+							</ul>
 						</li>
-						<li class="">
-							<a href="customers.html">Customers</a>
+						<li class="menu-item-has-children">
+							<a href="#">Blog</a>
+							<ul class="sub-menu">
+								<li><a href="blog.html">Blog</a></li>
+								<li><a href="blog-details.html">Blog Details</a></li>
+							</ul>
 						</li>
-						<li class="last-item">
-							<a href="contact.html">Contact</a>
+						<li class="last-item menu-item-has-children">
+							<a href="#">Contact</a>
+							<ul class="sub-menu">
+								<li><a href="contact-1.html">Contact 1</a></li>
+								<li><a href="contact-2.html">Contact 2</a></li>
+								<li><a href="contact-3.html">Contact 3</a></li>
+								<li><a href="contact-4.html">Contact 4</a></li>
+							</ul>
 						</li>
 					</ul> <!-- //.nav-menu -->
 					<!-- //.nav-menu -->
@@ -162,10 +218,10 @@
 									<span class="sign-text"><i class="ri-user-3-line"></i> Sign In </span>
 								</a>
 							</li>
-							<!-- <li class="btn-quote">
-									<a href="contact-1.html"><span class="btn-text"><i class="ri-download-line"></i>
-											Download</span></a>
-								</li> -->
+							<li class="btn-quote">
+								<a href="contact-1.html"><span class="btn-text"><i class="ri-download-line"></i>
+										Download</span></a>
+							</li>
 						</ul>
 					</div>
 				</nav>
@@ -195,17 +251,17 @@
 										<i class="ri-arrow-right-up-line"></i>
 									</a>
 								</li>
-								<!-- <li>
+								<li>
 									<div class="rs-videos mt--10">
 										<div class="animate-border intro-video">
 											<a class="popup-border popup-videos"
-												href="https://www.youtube.com/watch?v=FMvA5fyZ338" style="color:#fff;">
+												href="https://www.youtube.com/watch?v=FMvA5fyZ338">
 												<span class="btn-text">Intro Video</span>
 												<i class="ri-arrow-right-up-line"></i>
 											</a>
 										</div>
 									</div>
-								</li> -->
+								</li>
 							</ul>
 							<!-- Counter Start -->
 							<div class="rs-counter counter-style1 counter-modify1 mt-45">
@@ -214,22 +270,22 @@
 										<div class="rs-counter-list">
 											<div class="counter-right-border"></div>
 											<div class="count-text">
-												<div class="count-number" style="color:#fff!important;">
-													<span class="rs-count" style="color:#fff;">98</span>
-													<span class="prefix" style="color:#fff;">%</span>
+												<div class="count-number">
+													<span class="rs-count">5</span>
+													<span class="prefix">M+</span>
 												</div>
-												<span class="title" style="color:#fff;">Claim Approval Rate</span>
+												<span class="title">Satisfied User</span>
 											</div>
 										</div>
 									</div>
 									<div class="col-lg-4 col-md-4">
 										<div class="rs-counter-list">
 											<div class="count-text">
-												<div class="count-number" style="color:#fff;">
-													<span class="rs-count" style="color:#fff;">24</span>
-													<span class="prefix" style="color:#fff;">/7</span>
+												<div class="count-number">
+													<span class="rs-count">80</span>
+													<span class="prefix">K+</span>
 												</div>
-												<span class="title" style="color:#fff;">Customer Support</span>
+												<span class="title">Positive Reviews</span>
 											</div>
 										</div>
 									</div>
@@ -242,12 +298,12 @@
 						<div class="bnr-images">
 							<div class="main-img">
 								<div class="woman-img">
-									<img class="wow fadeInUp" src="assets/images/banner/style3/doctor girl.png"
+									<img class="wow fadeInUp" src="assets/images/banner/style3/cheerful-woman.png"
 										alt="">
 									<div class="circle">
 										<img src="assets/images/banner/style3/circle.png" alt="">
 									</div>
-									<!-- <div class="animate-shape one">
+									<div class="animate-shape one">
 										<img class="veritcal2" src="assets/images/banner/style3/shape-1.png" alt="">
 									</div>
 									<div class="animate-shape two">
@@ -255,7 +311,7 @@
 									</div>
 									<div class="animate-shape three">
 										<img class="horizontal2" src="assets/images/banner/style3/shape-3.png" alt="">
-									</div> -->
+									</div>
 								</div>
 							</div>
 						</div>
@@ -270,51 +326,11 @@
 			<div class="container">
 				<div class="sec-title text-center mb-40">
 					<h3 class="title title3">
-						Trusted by Leading Hospitals
+						Trusted by 5K+ Companies
 					</h3>
 				</div>
 				<div class="slider partner-slide-1">
 					<div class="partner-item">
-						<div class="logo-img">
-							<a href="https://rstheme.com/">
-								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/Musk-Clinic-Logo.png" title=""
-									alt="">
-							</a>
-						</div>
-					</div>
-					<div class="partner-item">
-						<div class="logo-img">
-							<a href="https://rstheme.com/">
-								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/parekhs.png" title=""
-									alt="">
-							</a>
-						</div>
-					</div>
-					<div class="partner-item">
-						<div class="logo-img">
-							<a href="https://rstheme.com/">
-								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/3.png" title=""
-									alt="">
-							</a>
-						</div>
-					</div>
-					<div class="partner-item">
-						<div class="logo-img">
-							<a href="https://rstheme.com/">
-								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/4.png" title=""
-									alt="">
-							</a>
-						</div>
-					</div>
-					<div class="partner-item">
-						<div class="logo-img">
-							<a href="https://rstheme.com/">
-								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/5.png" title=""
-									alt="">
-							</a>
-						</div>
-					</div>
-					<!-- <div class="partner-item">
 						<div class="logo-img">
 							<a href="https://rstheme.com/">
 								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/1.png" title=""
@@ -353,7 +369,47 @@
 									alt="">
 							</a>
 						</div>
-					</div> -->
+					</div>
+					<div class="partner-item">
+						<div class="logo-img">
+							<a href="https://rstheme.com/">
+								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/1.png" title=""
+									alt="">
+							</a>
+						</div>
+					</div>
+					<div class="partner-item">
+						<div class="logo-img">
+							<a href="https://rstheme.com/">
+								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/2.png" title=""
+									alt="">
+							</a>
+						</div>
+					</div>
+					<div class="partner-item">
+						<div class="logo-img">
+							<a href="https://rstheme.com/">
+								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/3.png" title=""
+									alt="">
+							</a>
+						</div>
+					</div>
+					<div class="partner-item">
+						<div class="logo-img">
+							<a href="https://rstheme.com/">
+								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/4.png" title=""
+									alt="">
+							</a>
+						</div>
+					</div>
+					<div class="partner-item">
+						<div class="logo-img">
+							<a href="https://rstheme.com/">
+								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/5.png" title=""
+									alt="">
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -429,7 +485,7 @@
 					<div class="row y-middle">
 						<div class="col-lg-6">
 							<div class="feature-main">
-								<img src="assets/images/about/home-section-customer.png" alt="Images">
+								<img src="assets/images/home-section-customer.png" alt="Images">
 								<!-- <div class="multi-img one">
 									<img class="horizontal3" src="assets/images/feature/style2/card1.png" alt="Images">
 								</div> -->
@@ -520,15 +576,15 @@
 							</div>
 							<div class="col-lg-6">
 								<div class="feature-main text-right">
-									<img src="assets/images/about/home-section-customer-2.png" alt="Images">
-									<!-- <div class="multi-img two">
+									<img src="assets/images/feature/style2/mony-rcv.png" alt="Images">
+									<div class="multi-img two">
 										<img class="horizontal3" src="assets/images/feature/style2/shape-1.png"
 											alt="Images">
 									</div>
 									<div class="multi-img three">
 										<img class="horizontal4" src="assets/images/feature/style2/shape-2.png"
 											alt="Images">
-									</div> -->
+									</div>
 								</div>
 							</div>
 						</div>
@@ -660,7 +716,7 @@
 				<div class="row y-middle">
 					<div class="col-lg-6 md-mb-50">
 						<div class="faq-img">
-							<img src="assets/images/about/FAQ.png" alt="">
+							<img src="assets/images/faq/payment-image.png" alt="">
 						</div>
 					</div>
 					<div class="col-lg-6">
@@ -674,47 +730,56 @@
 								<div class="card">
 									<div class="card-header">
 										<a class="card-link" href="#" data-bs-toggle="collapse"
-											data-bs-target="#collapseOne" aria-expanded="true">What services does MEDSCRED offer?</a>
+											data-bs-target="#collapseOne" aria-expanded="true">When will my order
+											arrive?</a>
 									</div>
 									<div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
 										<div class="card-body">
-											MEDSCRED offers a range of services including CMAS (Claim Management as a Service), Reimbursement, Cashless solutions, and Heal Now, Pay Later plans.
+											Urna neque viverra justo nec ultrices. Justo laoreet sit amet cursus sit
+											amet dictum. Quisque id diam vel quam elementum pulvinar etiam Nisi porta
+											lorem mollis aliquam.
 										</div>
 									</div>
 								</div>
 								<div class="card">
 									<div class="card-header">
 										<a class="card-link collapsed" href="#" data-bs-toggle="collapse"
-											data-bs-target="#collapseTwo" aria-expanded="false">How can MEDSCRED help me manage my healthcare expenses?
-										</a>
+											data-bs-target="#collapseTwo" aria-expanded="false">How to return
+											products?</a>
 									</div>
 									<div id="collapseTwo" class="collapse" data-bs-parent="#accordion" style="">
 										<div class="card-body">
-											We provide efficient claim management, streamline reimbursement processes, offer cashless solutions for hassle-free medical services, and flexible payment plans to pay for your healthcare later.
+											Urna neque viverra justo nec ultrices. Justo laoreet sit amet cursus sit
+											amet dictum. Quisque id diam vel quam elementum pulvinar etiam Nisi porta
+											lorem mollis aliquam.
 										</div>
 									</div>
 								</div>
 								<div class="card">
 									<div class="card-header">
 										<a class="card-link collapsed" href="#" data-bs-toggle="collapse"
-											data-bs-target="#collapseThree" aria-expanded="false">Is MEDSCRED available for all types of healthcare providers?
-										</a>
+											data-bs-target="#collapseThree" aria-expanded="false">Do you have a coupon
+											code?</a>
 									</div>
 									<div id="collapseThree" class="collapse" data-bs-parent="#accordion" style="">
 										<div class="card-body">
-											Yes, MEDSCRED provides solutions for a wide range of healthcare providers, including hospitals, clinics, and individual practitioners.
+											Urna neque viverra justo nec ultrices. Justo laoreet sit amet cursus sit
+											amet dictum. Quisque id diam vel quam elementum pulvinar etiam Nisi porta
+											lorem mollis aliquam.
 										</div>
 									</div>
 								</div>
 								<div class="card">
 									<div class="card-header">
 										<a class="card-link collapsed" href="#" data-bs-toggle="collapse"
-											data-bs-target="#collapseFour" aria-expanded="false">What makes MEDSCRED different from other healthcare finance companies?
-										</a>
+											data-bs-target="#collapseFour" aria-expanded="false">Can I get a discount
+											for a big order?</a>
 									</div>
 									<div id="collapseFour" class="collapse" data-bs-parent="#accordion" style="">
 										<div class="card-body">
-											Our commitment to transparency, customer-centric approach, and expert guidance set us apart. We focus on providing clear and effective solutions tailored to your specific needs.
+											Urna neque viverra justo nec ultrices. Justo laoreet sit amet cursus sit
+											amet dictum. Quisque id diam vel quam elementum pulvinar etiam Nisi porta
+											lorem mollis aliquam.
 										</div>
 									</div>
 								</div>
@@ -729,14 +794,15 @@
 					<div class="cta-wrap">
 						<div class="sec-title text-center">
 							<h2 class="title white-color pb-20">
-								Your Health, Our Priority<br>Simplified Financing
+								5M+ Satisfied User<br>
+								Try it now!
 							</h2>
 							<p class="desc desc3">
-								Effortless Claims, Quick Reimbursements
+								Try it risk free — we don’t charge cancellation fees.
 							</p>
 							<div class="btn-part mt-30">
-								<a class="readon started blue-normal try-btn" href="#">
-									<span class="btn-text">Sign Up Now</span>
+								<a class="readon started blue-normal try-btn" href="contact-1.html">
+									<span class="btn-text">Try 14 days Free</span>
 								</a>
 							</div>
 						</div>
