--- a/about.html
+++ b/about.html
@@ -85,14 +85,17 @@
 																<a href="about.html" style="color:#fff;">About</a>
 															</li>
 															<li class="">
+																<a href="services.html" style="color:#fff;">Services</a>
+															</li>
+															<li class="">
 																<a href="partners.html" style="color:#fff;">Partners</a>
 															</li>
 															<li class="">
 																<a href="customers.html" style="color:#fff;">Customers</a>
 															</li>
-															<li class="last-item">
+															<!-- <li class="last-item">
 																<a href="contact.html" style="color:#fff;">Contact</a>
-															</li>
+															</li> -->
 														</ul> <!-- //.nav-menu -->
 													</nav> <!-- //.nav-menu -->
 												</nav>
@@ -103,8 +106,8 @@
 										<div class="expand-btn-inner">
 											<ul>
 												<li class="btn-signin">
-													<a class="signin-button" href="contact-1.html">
-														<span class="sign-text"><i class="ri-user-3-line"></i> Sign In </span>
+													<a class="signin-button" href="contact.html">
+														<span class="sign-text"><i class="ri-user-3-line"></i> Contact Us </span>
 													</a>
 												</li>
 												<li class="nav-link">
@@ -142,14 +145,15 @@
 									<a href="about.html">About</a>
 								</li>
 								<li class="">
+									<a href="services.html">Services</a>
+								</li>
+								<li class="">
 									<a href="partners.html">Partners</a>
 								</li>
 								<li class="">
 									<a href="customers.html">Customers</a>
 								</li>
-								<li class="last-item">
-									<a href="contact.html">Contact</a>
-								</li>
+								
 							</ul> <!-- //.nav-menu -->
 							<!-- //.nav-menu -->
 		
@@ -157,8 +161,8 @@
 							<div class="canvas-contact">
 								<ul>
 									<li class="btn-signin">
-										<a class="signin-button" href="contact-1.html">
-											<span class="sign-text"><i class="ri-user-3-line"></i> Sign In </span>
+										<a class="signin-button" href="contact.html">
+											<span class="sign-text"><i class="ri-user-3-line"></i> Contact Us </span>
 										</a>
 									</li>
 									<!-- <li class="btn-quote">
@@ -282,7 +286,7 @@
 								</div> -->
 								<!-- Counter End -->
     	        				<div class="btn-part">
-    	        					<a class="readon started get-blue" href="about-1.html">
+    	        					<a class="readon started get-blue" href="about.html">
     	        						<span class="btn-text">Get Started</span>
     	        					</a>
     	        				</div>
@@ -306,10 +310,10 @@
 		      				<div class="services-item">
 			    				<div class="services-wrap">
 				    				<div class="services-icon">
-				    					<img src="assets/images/services/style14/blue-icons/ser1.png" alt="Images">
+				    					<img src="assets/images/Medscred Icons/Vision.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Our Vision</a></h4>
+				    					<h4 class="title"><a href="#">Our Vision</a></h4>
 				    					<p class="desc-text">Empowering every Indian to navigate their healthcare journey seamlessly, MedsCred is the trusted platform that streamlines medical insurance claims and loans, ensuring financial well-being and peace of mind in times of health challenges.</p>
 				    				</div>
 			    				</div>
@@ -319,10 +323,10 @@
 		      				<div class="services-item">
 			    				<div class="services-wrap">
 				    				<div class="services-icon">
-				    					<img src="assets/images/services/style14/blue-icons/ser2.png" alt="Images">
+				    					<img src="assets/images/Medscred Icons/Mission.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Our Mission</a></h4>
+				    					<h4 class="title"><a href="#">Our Mission</a></h4>
 				    					<p class="desc-text">At MedsCred, our mission is to simplify and accelerate access to financial support for healthcare expenses by leveraging cutting-edge technology. We are dedicated to providing a user-friendly platform that enables every Indian to effortlessly manage and optimize their medical insurance claims and loans, fostering a healthier and financially secure nation.</p>
 				    				</div>
 			    				</div>
@@ -335,7 +339,7 @@
 				    					<img src="assets/images/services/style14/blue-icons/ser3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">UX Design</a></h4>
+				    					<h4 class="title"><a href="#">UX Design</a></h4>
 				    					<p class="desc-text">Aliquam nulla facilisi cras fermentum the feugiat.</p>
 				    				</div>
 			    				</div>
@@ -348,7 +352,7 @@
 				    					<img src="assets/images/services/style14/blue-icons/ser4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Copywriting</a></h4>
+				    					<h4 class="title"><a href="#">Copywriting</a></h4>
 				    					<p class="desc-text">Aliquam nulla facilisi cras fermentum the feugiat.</p>
 				    				</div>
 			    				</div>
@@ -360,7 +364,7 @@
 			<!-- Services End -->
 
 			<!-- About Start -->
-			<div class="rs-about about-style1 pt-140 pb-10 md-pt-80 md-pb-75">
+			<!-- <div class="rs-about about-style1 pt-140 pb-10 md-pt-80 md-pb-75">
 				<div class="container">
 					<div class="row y-middle">
 						<div class="col-lg-6 md-mb-50">
@@ -431,7 +435,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!-- About End -->
 
 		   	<!-- Team Member Start -->
@@ -653,7 +657,7 @@
 		<!-- Footer Start -->
 		<footer id="rs-footer" class="rs-footer footer-main-home footer-modify3">
 			<div class="container">
-				<div class="footer-top">
+				<div class="footer-top" style="padding-top: 50px!important;">
 					<div class="row">
 						<div class="col-lg-4 md-mb-20">
 							<div class="footer-logo">
@@ -664,31 +668,31 @@
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
 								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 							</ul>
 						</div>
 						<div class="col-lg-8 pl-110 md-pl-15">
 							<div class="row">
 								<div class="col-lg-4 md-mb-10">
-									<h3 class="footer-title">About</h3>
+									<h3 class="footer-title">Pages</h3>
 									<ul class="site-map">
-										<li><a href="about-1.html">About</a></li>
-										<li><a href="services-details-2.html">Services</a></li>
-										<li><a href="blog.html">Blog</a></li>
-										<li><a href="contact-1.html">Contact</a></li>
+										<li><a href="about.html">About</a></li>
+										<li><a href="services.html">Services</a></li>
+										<li><a href="partners.html">Partners</a></li>
+										<li><a href="customers.html">Customers</a></li>
+										<li><a href="contact.html">Contact</a></li>
 									</ul>
 								</div>
-								<div class="col-lg-4 md-mb-10">
-									<h3 class="footer-title">Resources</h3>
+								<div class="col-lg-6 md-mb-10">
+									<h3 class="footer-title">Get in Touch</h3>
 									<ul class="site-map">
-										<li><a href="#">Product</a></li>
-										<li><a href="price-plan-2.html">Pricing Plan</a></li>
-										<li><a href="faqs.html">Faqs</a></li>
-										<li><a href="#">Help Center</a></li>
+										<li><a href="tel:+91 87808 62493">+91 87808 62493</a></li>
+										<li><a href="mailto:info@medscred.com">info@medscred.com</a></li>
+										<!-- <li><a href="faqs.html">Faqs</a></li> -->
+										<li><a>IHub 2nd floor - Prajna Puram, KCG Campus, opp. PRL, Navrangpura, Ahmedabad, Gujarat 380015</a></li>
 									</ul>
 								</div>
-								<div class="col-lg-4">
+								<!-- <div class="col-lg-4">
 									<h3 class="footer-title">Get apps On!</h3>
 									<ul class="textwidget-btn">
 										<li>
@@ -702,7 +706,7 @@
 											</a>
 										</li>
 									</ul>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -715,7 +719,7 @@
 							<div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
 								<ul class="copy-right-menu">
 									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Refund Policy</a></li>
+									<li><a href="#">Terms and Condition</a></li>
 								</ul>
 							</div>
 							<div class="col-lg-6">
