--- a/contact.html
+++ b/contact.html
@@ -88,14 +88,17 @@
 														<a href="about.html" style="color:#fff;">About</a>
 													</li>
 													<li class="">
+														<a href="services.html" style="color:#fff;">Services</a>
+													</li>
+													<li class="">
 														<a href="partners.html" style="color:#fff;">Partners</a>
 													</li>
 													<li class="">
 														<a href="customers.html" style="color:#fff;">Customers</a>
 													</li>
-													<li class="last-item">
+													<!-- <li class="last-item">
 														<a href="contact.html" style="color:#fff;">Contact</a>
-													</li>
+													</li> -->
 												</ul> <!-- //.nav-menu -->
 											</nav> <!-- //.nav-menu -->
 										</nav>
@@ -106,8 +109,8 @@
 								<div class="expand-btn-inner">
 									<ul>
 										<li class="btn-signin">
-											<a class="signin-button" href="contact-1.html">
-												<span class="sign-text"><i class="ri-user-3-line"></i> Sign In </span>
+											<a class="signin-button" href="contact.html">
+												<span class="sign-text"><i class="ri-user-3-line"></i> Contact Us </span>
 											</a>
 										</li>
 										<li class="nav-link">
@@ -145,14 +148,17 @@
 							<a href="about.html">About</a>
 						</li>
 						<li class="">
+							<a href="services.html">Services</a>
+						</li>
+						<li class="">
 							<a href="partners.html">Partners</a>
 						</li>
 						<li class="">
 							<a href="customers.html">Customers</a>
 						</li>
-						<li class="last-item">
+						<!-- <li class="last-item">
 							<a href="contact.html">Contact</a>
-						</li>
+						</li> -->
 					</ul> <!-- //.nav-menu -->
 					<!-- //.nav-menu -->
 
@@ -160,8 +166,8 @@
 					<div class="canvas-contact">
 						<ul>
 							<li class="btn-signin">
-								<a class="signin-button" href="contact-1.html">
-									<span class="sign-text"><i class="ri-user-3-line"></i> Sign In </span>
+								<a class="signin-button" href="contact.html">
+									<span class="sign-text"><i class="ri-user-3-line"></i> Contact Us </span>
 								</a>
 							</li>
 							<!-- <li class="btn-quote">
@@ -366,8 +372,7 @@
 						<div class="footer-logo">
 							<a href="index.html"><img src="assets/images/medscred blue.png" alt=""></a>
 						</div>
-						<p class="widget-desc">Welcome to MedsCred, where we envision empowering every patient in India
-							through a seamless healthcare journey.</p>
+						<p class="widget-desc">Welcome to MedsCred, where we envision empowering every patient in India through a seamless healthcare journey.</p>
 						<ul class="footer-social md-mb-30">
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -378,24 +383,25 @@
 					<div class="col-lg-8 pl-110 md-pl-15">
 						<div class="row">
 							<div class="col-lg-4 md-mb-10">
-								<h3 class="footer-title">About</h3>
+								<h3 class="footer-title">Pages</h3>
 								<ul class="site-map">
-									<li><a href="about-1.html">About</a></li>
-									<li><a href="services-details-2.html">Services</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="contact-1.html">Contact</a></li>
+									<li><a href="about.html">About</a></li>
+									<li><a href="services.html">Services</a></li>
+									<li><a href="partners.html">Partners</a></li>
+									<li><a href="customers.html">Customers</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</div>
-							<div class="col-lg-4 md-mb-10">
-								<h3 class="footer-title">Resources</h3>
+							<div class="col-lg-6 md-mb-10">
+								<h3 class="footer-title">Get in Touch</h3>
 								<ul class="site-map">
-									<li><a href="#">Product</a></li>
-									<li><a href="price-plan-2.html">Pricing Plan</a></li>
-									<li><a href="faqs.html">Faqs</a></li>
-									<li><a href="#">Help Center</a></li>
+									<li><a href="tel:+91 87808 62493">+91 87808 62493</a></li>
+									<li><a href="mailto:info@medscred.com">info@medscred.com</a></li>
+									<!-- <li><a href="faqs.html">Faqs</a></li> -->
+									<li><a>IHub 2nd floor - Prajna Puram, KCG Campus, opp. PRL, Navrangpura, Ahmedabad, Gujarat 380015</a></li>
 								</ul>
 							</div>
-							<div class="col-lg-4">
+							<!-- <div class="col-lg-4">
 								<h3 class="footer-title">Get apps On!</h3>
 								<ul class="textwidget-btn">
 									<li>
@@ -409,7 +415,7 @@
 										</a>
 									</li>
 								</ul>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
@@ -422,7 +428,7 @@
 						<div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
 							<ul class="copy-right-menu">
 								<li><a href="#">Privacy Policy</a></li>
-								<li><a href="#">Refund Policy</a></li>
+								<li><a href="#">Terms and Condition</a></li>
 							</ul>
 						</div>
 						<div class="col-lg-6">
