--- a/index-10.html
+++ b/index-10.html
@@ -121,9 +121,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -236,9 +236,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -347,7 +347,7 @@
 				    					<img src="assets/images/services/style8/icons1.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">1000+ UI Elements</a></h4>
+				    					<h4 class="title"><a href="#">1000+ UI Elements</a></h4>
 				    					<p class="desc-text">This UI kit has all you need to manage your customers smart devices.</p>
 				    				</div>
 			    				</div>
@@ -360,7 +360,7 @@
 				    					<img src="assets/images/services/style8/icons2.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Huge Library</a></h4>
+				    					<h4 class="title"><a href="#">Huge Library</a></h4>
 				    					<p class="desc-text">This UI kit has all you need to manage your customers smart devices.</p>
 				    				</div>
 			    				</div>
@@ -373,7 +373,7 @@
 				    					<img src="assets/images/services/style8/icons3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Smart Variants</a></h4>
+				    					<h4 class="title"><a href="#">Smart Variants</a></h4>
 				    					<p class="desc-text">This UI kit has all you need to manage your customers smart devices.</p>
 				    				</div>
 			    				</div>
@@ -386,7 +386,7 @@
 				    					<img src="assets/images/services/style8/icons4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Global Styles</a></h4>
+				    					<h4 class="title"><a href="#">Global Styles</a></h4>
 				    					<p class="desc-text">This UI kit has all you need to manage your customers smart devices.</p>
 				    				</div>
 			    				</div>
@@ -399,7 +399,7 @@
 				    					<img src="assets/images/services/style8/icons5.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Light & Dark Mode</a></h4>
+				    					<h4 class="title"><a href="#">Light & Dark Mode</a></h4>
 				    					<p class="desc-text">This UI kit has all you need to manage your customers smart devices.</p>
 				    				</div>
 			    				</div>
@@ -412,7 +412,7 @@
 				    					<img src="assets/images/services/style8/icons6.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">08px Grid System</a></h4>
+				    					<h4 class="title"><a href="#">08px Grid System</a></h4>
 				    					<p class="desc-text">This UI kit has all you need to manage your customers smart devices.</p>
 				    				</div>
 			    				</div>
@@ -425,7 +425,7 @@
 				    					<img src="assets/images/services/style8/icons7.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Google Font Used</a></h4>
+				    					<h4 class="title"><a href="#">Google Font Used</a></h4>
 				    					<p class="desc-text">This UI kit has all you need to manage your customers smart devices.</p>
 				    				</div>
 			    				</div>
@@ -438,7 +438,7 @@
 				    					<img src="assets/images/services/style8/icons8.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Symbol Overrides</a></h4>
+				    					<h4 class="title"><a href="#">Symbol Overrides</a></h4>
 				    					<p class="desc-text">This UI kit has all you need to manage your customers smart devices.</p>
 				    				</div>
 			    				</div>
@@ -478,13 +478,13 @@
 				    							<img src="assets/images/services/style9/icons/figma3.png" alt="Images">
 				    						</li>
 				    					</ul>
-				    					<h4 class="title"><a href="services-details.html">1000+ UI Elements</a></h4>
+				    					<h4 class="title"><a href="#">1000+ UI Elements</a></h4>
 				    					<p class="desc-text">Ultrices mi tempus imperdiet nulla the malesuada pellentesque elit. Nunc blandit massa enim nec nunc</p>
 				    					<div class="services-button ser-btn2">
-				    						<a href="services-details.html">
+				    						<a href="#">
 				    							<i class="ri-eye-line"></i><span class="btn-text">Preview</span>
 											</a>
-				    						<a class="download" href="services-details.html">
+				    						<a class="download" href="#">
 				    							<i class="ri-download-cloud-line"></i><span class="btn-text">Download</span>
 				    						</a>
 				    					</div>
@@ -510,13 +510,13 @@
 				    							<img src="assets/images/services/style9/icons/figma3.png" alt="Images">
 				    						</li>
 				    					</ul>
-				    					<h4 class="title"><a href="services-details.html">Sasly Design System</a></h4>
+				    					<h4 class="title"><a href="#">Sasly Design System</a></h4>
 				    					<p class="desc-text">Ultrices mi tempus imperdiet nulla the malesuada pellentesque elit. Nunc blandit massa enim nec nunc</p>
 				    					<div class="services-button ser-btn2">
-				    						<a href="services-details.html">
+				    						<a href="#">
 				    							<i class="ri-eye-line"></i><span class="btn-text">Preview</span>
 											</a>
-				    						<a class="download" href="services-details.html">
+				    						<a class="download" href="#">
 				    							<i class="ri-download-cloud-line"></i><span class="btn-text">Download</span>
 				    						</a>
 				    					</div>
@@ -542,13 +542,13 @@
 				    							<img src="assets/images/services/style9/icons/figma3.png" alt="Images">
 				    						</li>
 				    					</ul>
-				    					<h4 class="title"><a href="services-details.html">Sasly Mobile UI Kit</a></h4>
+				    					<h4 class="title"><a href="#">Sasly Mobile UI Kit</a></h4>
 				    					<p class="desc-text">Ultrices mi tempus imperdiet nulla the malesuada pellentesque elit. Nunc blandit massa enim nec nunc</p>
 				    					<div class="services-button ser-btn2">
-				    						<a href="services-details.html">
+				    						<a href="#">
 				    							<i class="ri-eye-line"></i><span class="btn-text">Preview</span>
 											</a>
-				    						<a class="download" href="services-details.html">
+				    						<a class="download" href="#">
 				    							<i class="ri-download-cloud-line"></i><span class="btn-text">Download</span>
 				    						</a>
 				    					</div>
@@ -982,7 +982,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -1023,7 +1023,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
