--- a/index-11.html
+++ b/index-11.html
@@ -119,9 +119,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -234,9 +234,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -354,7 +354,7 @@
 				    					<img src="assets/images/services/main-home/icons1.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Organize Everything</a></h4>
+				    					<h4 class="title"><a href="#">Organize Everything</a></h4>
 				    					<p class="services-txt">Accumsan lacus vel facilisis volutpat velit egestas</p>
 				    				</div>
 			    				</div>
@@ -367,7 +367,7 @@
 				    					<img src="assets/images/services/main-home/icons2.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Get Reminder</a></h4>
+				    					<h4 class="title"><a href="#">Get Reminder</a></h4>
 				    					<p class="services-txt">Accumsan lacus vel facilisis volutpat velit egestas</p>
 				    				</div>
 			    				</div>
@@ -380,7 +380,7 @@
 				    					<img src="assets/images/services/main-home/icons3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Calendar Views</a></h4>
+				    					<h4 class="title"><a href="#">Calendar Views</a></h4>
 				    					<p class="services-txt">Accumsan lacus vel facilisis volutpat velit egestas</p>
 				    				</div>
 			    				</div>
@@ -393,7 +393,7 @@
 				    					<img src="assets/images/services/main-home/icons4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Team collaboration</a></h4>
+				    					<h4 class="title"><a href="#">Team collaboration</a></h4>
 				    					<p class="services-txt">Accumsan lacus vel facilisis volutpat velit egestas</p>
 				    				</div>
 			    				</div>
@@ -932,7 +932,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -973,7 +973,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
