--- a/index-13.html
+++ b/index-13.html
@@ -121,9 +121,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -236,9 +236,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -345,7 +345,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style11/icons/ser-4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Customer Assistant</a></h4>
+				    					<h4 class="title"><a href="#">Customer Assistant</a></h4>
 				    					<p class="services-txt">Purus semper eget duis tellus. Sed viverra tellus habitasse platea.</p>
 				    				</div>
 			    				</div>
@@ -358,7 +358,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style11/icons/ser-5.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Shared Inbox</a></h4>
+				    					<h4 class="title"><a href="#">Shared Inbox</a></h4>
 				    					<p class="services-txt">Purus semper eget duis tellus. Sed viverra tellus habitasse platea.</p>
 				    				</div>
 			    				</div>
@@ -371,7 +371,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style11/icons/ser-6.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Knowledge Base</a></h4>
+				    					<h4 class="title"><a href="#">Knowledge Base</a></h4>
 				    					<p class="services-txt">Purus semper eget duis tellus. Sed viverra tellus habitasse platea.</p>
 				    				</div>
 			    				</div>
@@ -954,7 +954,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -995,7 +995,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
