--- a/index-14.html
+++ b/index-14.html
@@ -121,9 +121,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -236,9 +236,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -354,7 +354,7 @@
 						    					<img src="assets/images/services/style13/ser-1.png" alt="Images">
 						    				</div>
 						    				<div class="services-content">
-						    					<h4 class="title"><a href="services-details.html">Animation & Keyframes</a></h4>
+						    					<h4 class="title"><a href="#">Animation & Keyframes</a></h4>
 						    					<p class="services-txt">Nulla facilisi etiam diam it quis enim lobortis sceleris fermentum massa.</p>
 						    				</div>
 					    				</div>
@@ -367,7 +367,7 @@
 						    					<img src="assets/images/services/style13/ser-2.png" alt="Images">
 						    				</div>
 						    				<div class="services-content">
-						    					<h4 class="title"><a href="services-details.html">Trim & Slice</a></h4>
+						    					<h4 class="title"><a href="#">Trim & Slice</a></h4>
 						    					<p class="services-txt">Nulla facilisi etiam diam it quis enim lobortis sceleris fermentum massa.</p>
 						    				</div>
 					    				</div>
@@ -380,7 +380,7 @@
 						    					<img src="assets/images/services/style13/ser-3.png" alt="Images">
 						    				</div>
 						    				<div class="services-content">
-						    					<h4 class="title"><a href="services-details.html">Video Effects</a></h4>
+						    					<h4 class="title"><a href="#">Video Effects</a></h4>
 						    					<p class="services-txt">Nulla facilisi etiam diam it quis enim lobortis sceleris fermentum massa.</p>
 						    				</div>
 					    				</div>
@@ -393,7 +393,7 @@
 						    					<img src="assets/images/services/style13/ser-4.png" alt="Images">
 						    				</div>
 						    				<div class="services-content">
-						    					<h4 class="title"><a href="services-details.html">Audio Waveforms</a></h4>
+						    					<h4 class="title"><a href="#">Audio Waveforms</a></h4>
 						    					<p class="services-txt">Nulla facilisi etiam diam it quis enim lobortis sceleris fermentum massa.</p>
 						    				</div>
 					    				</div>
@@ -406,7 +406,7 @@
 						    					<img src="assets/images/services/style13/ser-5.png" alt="Images">
 						    				</div>
 						    				<div class="services-content">
-						    					<h4 class="title"><a href="services-details.html">Title Editor</a></h4>
+						    					<h4 class="title"><a href="#">Title Editor</a></h4>
 						    					<p class="services-txt">Nulla facilisi etiam diam it quis enim lobortis sceleris fermentum massa.</p>
 						    				</div>
 					    				</div>
@@ -419,7 +419,7 @@
 						    					<img src="assets/images/services/style13/ser-6.png" alt="Images">
 						    				</div>
 						    				<div class="services-content">
-						    					<h4 class="title"><a href="services-details.html">3D Animations</a></h4>
+						    					<h4 class="title"><a href="#">3D Animations</a></h4>
 						    					<p class="services-txt">Nulla facilisi etiam diam it quis enim lobortis sceleris fermentum massa.</p>
 						    				</div>
 					    				</div>
@@ -432,7 +432,7 @@
 						    					<img src="assets/images/services/style13/ser-7.png" alt="Images">
 						    				</div>
 						    				<div class="services-content">
-						    					<h4 class="title"><a href="services-details.html">Unlimited Tracks</a></h4>
+						    					<h4 class="title"><a href="#">Unlimited Tracks</a></h4>
 						    					<p class="services-txt">Nulla facilisi etiam diam it quis enim lobortis sceleris fermentum massa.</p>
 						    				</div>
 					    				</div>
@@ -445,7 +445,7 @@
 						    					<img src="assets/images/services/style13/ser-8.png" alt="Images">
 						    				</div>
 						    				<div class="services-content">
-						    					<h4 class="title"><a href="services-details.html">Cross Platform</a></h4>
+						    					<h4 class="title"><a href="#">Cross Platform</a></h4>
 						    					<p class="services-txt">Nulla facilisi etiam diam it quis enim lobortis sceleris fermentum massa.</p>
 						    				</div>
 					    				</div>
@@ -754,7 +754,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -795,7 +795,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
