--- a/index-15.html
+++ b/index-15.html
@@ -119,9 +119,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -234,9 +234,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -421,10 +421,10 @@
 				    					<img src="assets/images/services/style2/ser1.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Easy Payment</a></h4>
+				    					<h4 class="title"><a href="#">Easy Payment</a></h4>
 				    					<p class="services-txt">Ac orci phasellus egestas tellus rutrum. Elit duis the intro tristique sollicitudin.</p>
 				    					<div class="services-button">
-				    						<a href="services-details.html"><i class="ri-arrow-right-line"></i></a>
+				    						<a href="#"><i class="ri-arrow-right-line"></i></a>
 				    					</div>
 				    				</div>
 			    				</div>
@@ -437,10 +437,10 @@
 				    					<img src="assets/images/services/style2/ser2.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Control Your Account</a></h4>
+				    					<h4 class="title"><a href="#">Control Your Account</a></h4>
 				    					<p class="services-txt">Ac orci phasellus egestas tellus rutrum. Elit duis the intro tristique sollicitudin.</p>
 				    					<div class="services-button">
-				    						<a href="services-details.html"><i class="ri-arrow-right-line"></i></a>
+				    						<a href="#"><i class="ri-arrow-right-line"></i></a>
 				    					</div>
 				    				</div>
 			    				</div>
@@ -453,10 +453,10 @@
 				    					<img src="assets/images/services/style2/ser3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Add Any Bank Card</a></h4>
+				    					<h4 class="title"><a href="#">Add Any Bank Card</a></h4>
 				    					<p class="services-txt">Ac orci phasellus egestas tellus rutrum. Elit duis the intro tristique sollicitudin.</p>
 				    					<div class="services-button">
-				    						<a href="services-details.html"><i class="ri-arrow-right-line"></i></a>
+				    						<a href="#"><i class="ri-arrow-right-line"></i></a>
 				    					</div>
 				    				</div>
 			    				</div>
@@ -469,10 +469,10 @@
 				    					<img src="assets/images/services/style2/ser4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Access Any Devices</a></h4>
+				    					<h4 class="title"><a href="#">Access Any Devices</a></h4>
 				    					<p class="services-txt">Ac orci phasellus egestas tellus rutrum. Elit duis the intro tristique sollicitudin.</p>
 				    					<div class="services-button">
-				    						<a href="services-details.html"><i class="ri-arrow-right-line"></i></a>
+				    						<a href="#"><i class="ri-arrow-right-line"></i></a>
 				    					</div>
 				    				</div>
 			    				</div>
@@ -829,7 +829,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -870,7 +870,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
