--- a/index-3.html
+++ b/index-3.html
@@ -122,9 +122,9 @@
 																<li class="last-item menu-item-has-children">
 																    <a href="#">Services</a>
 																    <ul class="sub-menu">
-																        <li><a href="services-1.html">Services 1</a></li>
+																        <li><a href="#">Services 1</a></li>
 																        <li><a href="services-2.html">Services 2</a></li>
-																        <li><a href="services-details.html">Services Details</a></li>
+																        <li><a href="#">Services Details</a></li>
 																    </ul>
 																</li>
 																<li><a href="testimonial.html">Testimonial</a></li>  
@@ -238,9 +238,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -340,7 +340,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style4/ser-1.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Cloud Infrastructure</a></h4>
+				    					<h4 class="title"><a href="#">Cloud Infrastructure</a></h4>
 				    					<p class="services-txt">Sed augue lacus viverra vitae. Feugiat scelerisque</p>
 				    				</div>
 			    				</div>
@@ -353,7 +353,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style4/ser-2.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Fast Performance</a></h4>
+				    					<h4 class="title"><a href="#">Fast Performance</a></h4>
 				    					<p class="services-txt">Sed augue lacus viverra vitae. Feugiat scelerisque</p>
 				    				</div>
 			    				</div>
@@ -366,7 +366,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style4/ser-3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Cloud Management</a></h4>
+				    					<h4 class="title"><a href="#">Cloud Management</a></h4>
 				    					<p class="services-txt">Sed augue lacus viverra vitae. Feugiat scelerisque</p>
 				    				</div>
 			    				</div>
@@ -379,7 +379,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style4/ser-4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Automatic Update</a></h4>
+				    					<h4 class="title"><a href="#">Automatic Update</a></h4>
 				    					<p class="services-txt">Sed augue lacus viverra vitae. Feugiat scelerisque</p>
 				    				</div>
 			    				</div>
@@ -392,7 +392,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style4/ser-5.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Advanced<br>API</a></h4>
+				    					<h4 class="title"><a href="#">Advanced<br>API</a></h4>
 				    					<p class="services-txt">Sed augue lacus viverra vitae. Feugiat scelerisque</p>
 				    				</div>
 			    				</div>
@@ -405,7 +405,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style4/ser-6.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Code and Data Rollback</a></h4>
+				    					<h4 class="title"><a href="#">Code and Data Rollback</a></h4>
 				    					<p class="services-txt">Sed augue lacus viverra vitae. Feugiat scelerisque</p>
 				    				</div>
 			    				</div>
@@ -418,7 +418,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style4/ser-7.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">App<br>Integration</a></h4>
+				    					<h4 class="title"><a href="#">App<br>Integration</a></h4>
 				    					<p class="services-txt">Sed augue lacus viverra vitae. Feugiat scelerisque</p>
 				    				</div>
 			    				</div>
@@ -431,7 +431,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style4/ser-8.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Strong & Security</a></h4>
+				    					<h4 class="title"><a href="#">Strong & Security</a></h4>
 				    					<p class="services-txt">Sed augue lacus viverra vitae. Feugiat scelerisque</p>
 				    				</div>
 			    				</div>
@@ -906,7 +906,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -947,7 +947,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
