--- a/index-5.html
+++ b/index-5.html
@@ -121,9 +121,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -236,9 +236,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -522,7 +522,7 @@
 				    					<img src="assets/images/services/style10/ser-1.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Keyword Research</a></h4>
+				    					<h4 class="title"><a href="#">Keyword Research</a></h4>
 				    					<p class="services-txt">Some great feature that can improve your way to manage your website and sass product.</p>
 				    				</div>
 			    				</div>
@@ -535,7 +535,7 @@
 				    					<img src="assets/images/services/style10/ser-2.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Domain Research</a></h4>
+				    					<h4 class="title"><a href="#">Domain Research</a></h4>
 				    					<p class="services-txt">Some great feature that can improve your way to manage your website and sass product.</p>
 				    				</div>
 			    				</div>
@@ -548,7 +548,7 @@
 				    					<img src="assets/images/services/style10/ser-3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Site Management</a></h4>
+				    					<h4 class="title"><a href="#">Site Management</a></h4>
 				    					<p class="services-txt">Some great feature that can improve your way to manage your website and sass product.</p>
 				    				</div>
 			    				</div>
@@ -561,7 +561,7 @@
 				    					<img src="assets/images/services/style10/ser-4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Rank Tracking</a></h4>
+				    					<h4 class="title"><a href="#">Rank Tracking</a></h4>
 				    					<p class="services-txt">Some great feature that can improve your way to manage your website and sass product.</p>
 				    				</div>
 			    				</div>
@@ -574,7 +574,7 @@
 				    					<img src="assets/images/services/style10/ser-5.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Analytics</a></h4>
+				    					<h4 class="title"><a href="#">Analytics</a></h4>
 				    					<p class="services-txt">Some great feature that can improve your way to manage your website and sass product.</p>
 				    				</div>
 			    				</div>
@@ -587,7 +587,7 @@
 				    					<img src="assets/images/services/style10/ser-6.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Email Marketing</a></h4>
+				    					<h4 class="title"><a href="#">Email Marketing</a></h4>
 				    					<p class="services-txt">Some great feature that can improve your way to manage your website and sass product.</p>
 				    				</div>
 			    				</div>
@@ -1094,7 +1094,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -1135,7 +1135,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
