--- a/index-6.html
+++ b/index-6.html
@@ -119,9 +119,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -234,9 +234,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -361,7 +361,7 @@
 				    					<img src="assets/images/services/style1/ser1.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Hr Adminstration</a></h4>
+				    					<h4 class="title"><a href="#">Hr Adminstration</a></h4>
 				    					<p class="services-txt">Massa ultricies mi quis in dame the the hendrerit</p>
 				    				</div>
 			    				</div>
@@ -374,7 +374,7 @@
 				    					<img src="assets/images/services/style1/ser2.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Recruitment</a></h4>
+				    					<h4 class="title"><a href="#">Recruitment</a></h4>
 				    					<p class="services-txt">Massa ultricies mi quis in dame the the hendrerit</p>
 				    				</div>
 			    				</div>
@@ -387,7 +387,7 @@
 				    					<img src="assets/images/services/style1/ser3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Time Tracking</a></h4>
+				    					<h4 class="title"><a href="#">Time Tracking</a></h4>
 				    					<p class="services-txt">Massa ultricies mi quis in dame the the hendrerit</p>
 				    				</div>
 			    				</div>
@@ -400,7 +400,7 @@
 				    					<img src="assets/images/services/style1/ser4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Reporting</a></h4>
+				    					<h4 class="title"><a href="#">Reporting</a></h4>
 				    					<p class="services-txt">Massa ultricies mi quis in dame the the hendrerit</p>
 				    				</div>
 			    				</div>
@@ -1035,7 +1035,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -1076,7 +1076,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
