--- a/index.html
+++ b/index.html
@@ -86,14 +86,17 @@
 														<a href="about.html" style="color:#fff;">About</a>
 													</li>
 													<li class="">
+														<a href="services.html" style="color:#fff;">Services</a>
+													</li>
+													<li class="">
 														<a href="partners.html" style="color:#fff;">Partners</a>
 													</li>
 													<li class="">
 														<a href="customers.html" style="color:#fff;">Customers</a>
 													</li>
-													<li class="last-item">
+													<!-- <li class="last-item">
 														<a href="contact.html" style="color:#fff;">Contact</a>
-													</li>
+													</li> -->
 												</ul> <!-- //.nav-menu -->
 											</nav> <!-- //.nav-menu -->
 										</nav>
@@ -104,8 +107,8 @@
 								<div class="expand-btn-inner">
 									<ul>
 										<li class="btn-signin">
-											<a class="signin-button" href="contact-1.html">
-												<span class="sign-text"><i class="ri-user-3-line"></i> Sign In </span>
+											<a class="signin-button" href="contact.html">
+												<span class="sign-text"><i class="ri-user-3-line"></i> Contact Us </span>
 											</a>
 										</li>
 										<li class="nav-link">
@@ -143,6 +146,9 @@
 							<a href="about.html">About</a>
 						</li>
 						<li class="">
+							<a href="services.html">Services</a>
+						</li>
+						<li class="">
 							<a href="partners.html">Partners</a>
 						</li>
 						<li class="">
@@ -158,7 +164,7 @@
 					<div class="canvas-contact">
 						<ul>
 							<li class="btn-signin">
-								<a class="signin-button" href="contact-1.html">
+								<a class="signin-button" href="contact.html">
 									<span class="sign-text"><i class="ri-user-3-line"></i> Sign In </span>
 								</a>
 							</li>
@@ -190,7 +196,7 @@
 							<h1 class="title">Finance & Insurance needs</h1>
 							<ul class="banner-btn">
 								<li>
-									<a class="readon started blue-normal" href="contact-1.html">
+									<a class="readon started blue-normal" href="contact.html">
 										<span class="btn-text">Get Started</span>
 										<i class="ri-arrow-right-up-line"></i>
 									</a>
@@ -276,40 +282,40 @@
 				<div class="slider partner-slide-1">
 					<div class="partner-item">
 						<div class="logo-img">
-							<a href="https://rstheme.com/">
-								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/Musk-Clinic-Logo.png" title=""
+							<a href="#">
+								<img class="rs-grid-img " src="assets/images/partner/style1/Musk-Clinic-Logo.png" title=""
 									alt="">
 							</a>
 						</div>
 					</div>
 					<div class="partner-item">
 						<div class="logo-img">
-							<a href="https://rstheme.com/">
-								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/parekhs.png" title=""
+							<a href="#">
+								<img class="rs-grid-img " src="assets/images/partner/style1/parekhs.png" title=""
 									alt="">
 							</a>
 						</div>
 					</div>
 					<div class="partner-item">
 						<div class="logo-img">
-							<a href="https://rstheme.com/">
-								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/3.png" title=""
+							<a href="#">
+								<img class="rs-grid-img " src="assets/images/partner/style1/planet women.png" title=""
 									alt="">
 							</a>
 						</div>
 					</div>
 					<div class="partner-item">
 						<div class="logo-img">
-							<a href="https://rstheme.com/">
-								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/4.png" title=""
+							<a href="#">
+								<img class="rs-grid-img " src="assets/images/partner/style1/pranayam.webp" title=""
 									alt="">
 							</a>
 						</div>
 					</div>
 					<div class="partner-item">
 						<div class="logo-img">
-							<a href="https://rstheme.com/">
-								<img class="mains-logos rs-grid-img " src="assets/images/partner/style1/5.png" title=""
+							<a href="#">
+								<img class="rs-grid-img " src="assets/images/partner/style1/mayflower.svg" title=""
 									alt="">
 							</a>
 						</div>
@@ -375,7 +381,7 @@
 									<img src="assets/images/services/style3/ser-1.png" alt="Images">
 								</div>
 								<div class="services-content">
-									<h4 class="title"><a href="services-details.html">Claim Assistance</a></h4>
+									<h4 class="title"><a href="#">Claim Assistance</a></h4>
 									<p class="services-txt">Hassle free cashless insurance claims.</p>
 								</div>
 							</div>
@@ -388,7 +394,7 @@
 									<img src="assets/images/services/style3/ser-2.png" alt="Images">
 								</div>
 								<div class="services-content">
-									<h4 class="title"><a href="services-details.html">Heal Now, pay later</a></h4>
+									<h4 class="title"><a href="#">Heal Now, pay later</a></h4>
 									<p class="services-txt">Get instant credit for your patient's uncovered healthcare
 										needs.</p>
 								</div>
@@ -402,7 +408,7 @@
 									<img src="assets/images/services/style3/ser-3.png" alt="Images">
 								</div>
 								<div class="services-content">
-									<h4 class="title"><a href="services-details.html">Become a partner</a></h4>
+									<h4 class="title"><a href="#">Become a partner</a></h4>
 									<p class="services-txt">Become a partner now to grow your healthcare practice.</p>
 								</div>
 							</div>
@@ -415,7 +421,7 @@
 				    					<img src="assets/images/services/style3/ser-4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Get daily rewards</a></h4>
+				    					<h4 class="title"><a href="#">Get daily rewards</a></h4>
 				    					<p class="services-txt">Ac orci phasellus egestas tellus rutrum duis the intro</p>
 				    				</div>
 			    				</div>
@@ -469,7 +475,7 @@
 								</ul>
 								</p>
 								<div class="btn-part mt-35">
-									<a class="readon started blue-normal get-free" href="about-1.html">
+									<a class="readon started blue-normal get-free" href="about.html">
 										<span class="btn-text">Find Out More</span>
 									</a>
 								</div>
@@ -512,7 +518,7 @@
 										</ul>
 									</p>
 									<div class="btn-part mt-35">
-										<a class="readon started blue-normal get-free" href="about-1.html">
+										<a class="readon started blue-normal get-free" href="about.html">
 											<span class="btn-text">Find Out More</span>
 										</a>
 									</div>
@@ -540,7 +546,7 @@
 		<!-- Services Section End -->
 
 		<!-- Testimonial Section End -->
-		<div class="rs-testimonial testimonial-style2 testimonial-modify2 gray-bg5 pt-130 pb-170 md-pt-80 md-pb-120">
+		<div class="rs-testimonial d-none testimonial-style2 testimonial-modify2 gray-bg5 pt-130 pb-170 md-pt-80 md-pb-120">
 			<div class="container custom4">
 				<div class="sec-title text-center mb-45">
 					<h2 class="title">
@@ -655,7 +661,7 @@
 		<!-- Testimonial Section End -->
 
 		<!-- Faq Section Start -->
-		<div class="rs-faq faq-style2 gray-bg4 pt-130 md-pt-80">
+		<div class="rs-faq faq-style2 gray-bg4 pt-30 md-pt-80">
 			<div class="container">
 				<div class="row y-middle">
 					<div class="col-lg-6 md-mb-50">
@@ -731,12 +737,12 @@
 							<h2 class="title white-color pb-20">
 								Your Health, Our Priority<br>Simplified Financing
 							</h2>
-							<p class="desc desc3">
+							<p class="desc3 desc" style="text-align: center!important;">
 								Effortless Claims, Quick Reimbursements
 							</p>
 							<div class="btn-part mt-30">
-								<a class="readon started blue-normal try-btn" href="#">
-									<span class="btn-text">Sign Up Now</span>
+								<a class="readon started blue-normal try-btn" href="contact.html">
+									<span class="btn-text">Contact Us</span>
 								</a>
 							</div>
 						</div>
@@ -769,24 +775,25 @@
 					<div class="col-lg-8 pl-110 md-pl-15">
 						<div class="row">
 							<div class="col-lg-4 md-mb-10">
-								<h3 class="footer-title">About</h3>
+								<h3 class="footer-title">Pages</h3>
 								<ul class="site-map">
-									<li><a href="about-1.html">About</a></li>
-									<li><a href="services-details-2.html">Services</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="contact-1.html">Contact</a></li>
+									<li><a href="about.html">About</a></li>
+									<li><a href="services.html">Services</a></li>
+									<li><a href="partners.html">Partners</a></li>
+									<li><a href="customers.html">Customers</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</div>
-							<div class="col-lg-4 md-mb-10">
-								<h3 class="footer-title">Resources</h3>
+							<div class="col-lg-6 md-mb-10">
+								<h3 class="footer-title">Get in Touch</h3>
 								<ul class="site-map">
-									<li><a href="#">Product</a></li>
-									<li><a href="price-plan-2.html">Pricing Plan</a></li>
-									<li><a href="faqs.html">Faqs</a></li>
-									<li><a href="#">Help Center</a></li>
+									<li><a href="tel:+91 87808 62493">+91 87808 62493</a></li>
+									<li><a href="mailto:info@medscred.com">info@medscred.com</a></li>
+									<!-- <li><a href="faqs.html">Faqs</a></li> -->
+									<li><a>IHub 2nd floor - Prajna Puram, KCG Campus, opp. PRL, Navrangpura, Ahmedabad, Gujarat 380015</a></li>
 								</ul>
 							</div>
-							<div class="col-lg-4">
+							<!-- <div class="col-lg-4">
 								<h3 class="footer-title">Get apps On!</h3>
 								<ul class="textwidget-btn">
 									<li>
@@ -800,7 +807,7 @@
 										</a>
 									</li>
 								</ul>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
@@ -813,7 +820,7 @@
 						<div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
 							<ul class="copy-right-menu">
 								<li><a href="#">Privacy Policy</a></li>
-								<li><a href="#">Refund Policy</a></li>
+								<li><a href="#">Terms and Condition</a></li>
 							</ul>
 						</div>
 						<div class="col-lg-6">
