--- a/index2.html
+++ b/index2.html
@@ -104,8 +104,8 @@
 								<div class="expand-btn-inner">
 									<ul>
 										<li class="btn-signin">
-											<a class="signin-button" href="contact-1.html">
-												<span class="sign-text"><i class="ri-user-3-line"></i> Sign In </span>
+											<a class="signin-button" href="contact.html">
+												<span class="sign-text"><i class="ri-user-3-line"></i> Contact Us </span>
 											</a>
 										</li>
 										<li class="nav-link">
@@ -180,9 +180,9 @@
 								<li class="last-item menu-item-has-children">
 									<a href="#">Services</a>
 									<ul class="sub-menu">
-										<li><a href="services-1.html">Services 1</a></li>
+										<li><a href="#">Services 1</a></li>
 										<li><a href="services-2.html">Services 2</a></li>
-										<li><a href="services-details.html">Services Details</a></li>
+										<li><a href="#">Services Details</a></li>
 									</ul>
 								</li>
 								<li><a href="testimonial.html">Testimonial</a></li>
@@ -431,7 +431,7 @@
 									<img src="assets/images/services/style3/ser-1.png" alt="Images">
 								</div>
 								<div class="services-content">
-									<h4 class="title"><a href="services-details.html">Claim Assistance</a></h4>
+									<h4 class="title"><a href="#">Claim Assistance</a></h4>
 									<p class="services-txt">Hassle free cashless insurance claims.</p>
 								</div>
 							</div>
@@ -444,7 +444,7 @@
 									<img src="assets/images/services/style3/ser-2.png" alt="Images">
 								</div>
 								<div class="services-content">
-									<h4 class="title"><a href="services-details.html">Heal Now, pay later</a></h4>
+									<h4 class="title"><a href="#">Heal Now, pay later</a></h4>
 									<p class="services-txt">Get instant credit for your patient's uncovered healthcare
 										needs.</p>
 								</div>
@@ -458,7 +458,7 @@
 									<img src="assets/images/services/style3/ser-3.png" alt="Images">
 								</div>
 								<div class="services-content">
-									<h4 class="title"><a href="services-details.html">Become a partner</a></h4>
+									<h4 class="title"><a href="#">Become a partner</a></h4>
 									<p class="services-txt">Become a partner now to grow your healthcare practice.</p>
 								</div>
 							</div>
@@ -471,7 +471,7 @@
 				    					<img src="assets/images/services/style3/ser-4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Get daily rewards</a></h4>
+				    					<h4 class="title"><a href="#">Get daily rewards</a></h4>
 				    					<p class="services-txt">Ac orci phasellus egestas tellus rutrum duis the intro</p>
 				    				</div>
 			    				</div>
@@ -838,7 +838,7 @@
 								<h3 class="footer-title">About</h3>
 								<ul class="site-map">
 									<li><a href="about-1.html">About</a></li>
-									<li><a href="services-details-2.html">Services</a></li>
+									<li><a href="services.html">Services</a></li>
 									<li><a href="blog.html">Blog</a></li>
 									<li><a href="contact-1.html">Contact</a></li>
 								</ul>
@@ -879,7 +879,7 @@
 						<div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
 							<ul class="copy-right-menu">
 								<li><a href="#">Privacy Policy</a></li>
-								<li><a href="#">Refund Policy</a></li>
+								<li><a href="#">Terms and Condition</a></li>
 							</ul>
 						</div>
 						<div class="col-lg-6">
