--- a/about-2.html
+++ b/about-2.html
@@ -122,9 +122,9 @@
 																<li class="last-item menu-item-has-children">
 																    <a href="#">Services</a>
 																    <ul class="sub-menu">
-																        <li><a href="services-1.html">Services 1</a></li>
+																        <li><a href="#">Services 1</a></li>
 																        <li><a href="services-2.html">Services 2</a></li>
-																        <li><a href="services-details.html">Services Details</a></li>
+																        <li><a href="#">Services Details</a></li>
 																    </ul>
 																</li>
 																<li><a href="testimonial.html">Testimonial</a></li>  
@@ -238,9 +238,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -461,7 +461,7 @@
 			      					Nullam eget felis eget nunc lobortis mattis aliquam. Eu mi bibendum egestas congue quisque egestas diam.
 			      				</p>
 			      				<div class="btn-part mt-40">
-			      					<a class="readon started hire-us" href="services-details.html">
+			      					<a class="readon started hire-us" href="#">
 			      						<span class="btn-text">Hire Us</span>
 			      					</a>
 			      				</div>
@@ -476,7 +476,7 @@
   						    					<img src="assets/images/services/style14/ser1.png" alt="Images">
   						    				</div>
   						    				<div class="services-content">
-  						    					<h4 class="title"><a href="services-details.html">Brand Strategy</a></h4>
+  						    					<h4 class="title"><a href="#">Brand Strategy</a></h4>
   						    					<p class="desc-text">Aliquam nulla facilisi cras fermentum the feugiat.</p>
   						    				</div>
   					    				</div>
@@ -489,7 +489,7 @@
   						    					<img src="assets/images/services/style14/ser2.png" alt="Images">
   						    				</div>
   						    				<div class="services-content">
-  						    					<h4 class="title"><a href="services-details.html">Branding Design</a></h4>
+  						    					<h4 class="title"><a href="#">Branding Design</a></h4>
   						    					<p class="desc-text">Aliquam nulla facilisi cras fermentum the feugiat.</p>
   						    				</div>
   					    				</div>
@@ -502,7 +502,7 @@
   						    					<img src="assets/images/services/style14/ser3.png" alt="Images">
   						    				</div>
   						    				<div class="services-content">
-  						    					<h4 class="title"><a href="services-details.html">UX Design</a></h4>
+  						    					<h4 class="title"><a href="#">UX Design</a></h4>
   						    					<p class="desc-text">Aliquam nulla facilisi cras fermentum the feugiat.</p>
   						    				</div>
   					    				</div>
@@ -515,7 +515,7 @@
   						    					<img src="assets/images/services/style14/ser4.png" alt="Images">
   						    				</div>
   						    				<div class="services-content">
-  						    					<h4 class="title"><a href="services-details.html">Copywriting</a></h4>
+  						    					<h4 class="title"><a href="#">Copywriting</a></h4>
   						    					<p class="desc-text">Aliquam nulla facilisi cras fermentum the feugiat.</p>
   						    				</div>
   					    				</div>
@@ -600,7 +600,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -641,7 +641,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
