--- a/index-12.html
+++ b/index-12.html
@@ -121,9 +121,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -236,9 +236,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -360,7 +360,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style12/ser-1.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Control All Devices</a></h4>
+				    					<h4 class="title"><a href="#">Control All Devices</a></h4>
 				    					<p class="services-txt">enectus et netus et malesuada fames. Morbi quis commodo odio aenean</p>
 				    				</div>
 			    				</div>
@@ -373,7 +373,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style12/ser-2.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Smoke Detector</a></h4>
+				    					<h4 class="title"><a href="#">Smoke Detector</a></h4>
 				    					<p class="services-txt">enectus et netus et malesuada fames. Morbi quis commodo odio aenean</p>
 				    				</div>
 			    				</div>
@@ -386,7 +386,7 @@
 				    					<img class="dance_hover" src="assets/images/services/style12/ser-3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Alarm System</a></h4>
+				    					<h4 class="title"><a href="#">Alarm System</a></h4>
 				    					<p class="services-txt">enectus et netus et malesuada fames. Morbi quis commodo odio aenean</p>
 				    				</div>
 			    				</div>
@@ -764,7 +764,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -805,7 +805,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
