--- a/index-4.html
+++ b/index-4.html
@@ -121,9 +121,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -236,9 +236,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -358,7 +358,7 @@
 		    		    					<img class="dance_hover" src="assets/images/services/style5/ser-icon1.png" alt="Images">
 		    		    				</div>
 		    		    				<div class="services-content">
-		    		    					<h4 class="title"><a href="services-details.html">Web Security</a></h4>
+		    		    					<h4 class="title"><a href="#">Web Security</a></h4>
 		    		    					<p class="services-txt">Hendrerit gravida rutrum quisque tellus orciac.</p>
 		    		    				</div>
 		    		    			</div>
@@ -369,7 +369,7 @@
 		    		    					<img class="dance_hover" src="assets/images/services/style5/ser-icon2.png" alt="Images">
 		    		    				</div>
 		    		    				<div class="services-content">
-		    		    					<h4 class="title"><a href="services-details.html">Internet Security</a></h4>
+		    		    					<h4 class="title"><a href="#">Internet Security</a></h4>
 		    		    					<p class="services-txt">Hendrerit gravida rutrum quisque tellus orciac.</p>
 		    		    				</div>
 		    		    			</div>
@@ -380,7 +380,7 @@
 		    		    					<img class="dance_hover" src="assets/images/services/style5/ser-icon3.png" alt="Images">
 		    		    				</div>
 		    		    				<div class="services-content">
-		    		    					<h4 class="title"><a href="services-details.html">Data Security</a></h4>
+		    		    					<h4 class="title"><a href="#">Data Security</a></h4>
 		    		    					<p class="services-txt">Hendrerit gravida rutrum quisque tellus orciac.</p>
 		    		    				</div>
 		    		    			</div>
@@ -391,7 +391,7 @@
 		    		    					<img class="dance_hover" src="assets/images/services/style5/ser-icon4.png" alt="Images">
 		    		    				</div>
 		    		    				<div class="services-content">
-		    		    					<h4 class="title"><a href="services-details.html">Anti Tracker</a></h4>
+		    		    					<h4 class="title"><a href="#">Anti Tracker</a></h4>
 		    		    					<p class="services-txt">Hendrerit gravida rutrum quisque tellus orciac.</p>
 		    		    				</div>
 		    		    			</div>
@@ -866,7 +866,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -907,7 +907,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
