--- a/index-7.html
+++ b/index-7.html
@@ -121,9 +121,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -236,9 +236,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -358,10 +358,10 @@
 				    					<img src="assets/images/services/style6/ser-1.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Appointments</a></h4>
+				    					<h4 class="title"><a href="#">Appointments</a></h4>
 				    					<p class="services-txt">Diam donec adipiscing tristique risus nec feugiat in fermentum.</p>
 				    					<div class="services-button">
-				    						<a href="services-details.html"><i class="ri-arrow-right-line"></i></a>
+				    						<a href="#"><i class="ri-arrow-right-line"></i></a>
 				    					</div>
 				    				</div>
 			    				</div>
@@ -374,10 +374,10 @@
 				    					<img src="assets/images/services/style6/ser-2.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Event Booking</a></h4>
+				    					<h4 class="title"><a href="#">Event Booking</a></h4>
 				    					<p class="services-txt">Diam donec adipiscing tristique risus nec feugiat in fermentum.</p>
 				    					<div class="services-button">
-				    						<a href="services-details.html"><i class="ri-arrow-right-line"></i></a>
+				    						<a href="#"><i class="ri-arrow-right-line"></i></a>
 				    					</div>
 				    				</div>
 			    				</div>
@@ -390,10 +390,10 @@
 				    					<img src="assets/images/services/style6/ser-3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Online Meeting</a></h4>
+				    					<h4 class="title"><a href="#">Online Meeting</a></h4>
 				    					<p class="services-txt">Diam donec adipiscing tristique risus nec feugiat in fermentum.</p>
 				    					<div class="services-button">
-				    						<a href="services-details.html"><i class="ri-arrow-right-line"></i></a>
+				    						<a href="#"><i class="ri-arrow-right-line"></i></a>
 				    					</div>
 				    				</div>
 			    				</div>
@@ -783,7 +783,7 @@
 										<h3 class="footer-title">About</h3>
 										<ul class="site-map">
 			                                <li><a href="about-1.html">About</a></li>
-			                                <li><a href="services-details-2.html">Services</a></li>
+			                                <li><a href="services.html">Services</a></li>
 			                                <li><a href="blog.html">Blog</a></li>
 			                                <li><a href="contact-1.html">Contact</a></li>
 			                            </ul>
@@ -824,7 +824,7 @@
 	                    	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
 	                    	        <ul class="copy-right-menu">
 	                    	            <li><a href="#">Privacy Policy</a></li>
-	                    	            <li><a href="#">Refund Policy</a></li>
+	                    	            <li><a href="#">Terms and Condition</a></li>
 	                    	        </ul>
 	                    	    </div>
 	                    	    <div class="col-lg-6">
