--- a/index-8.html
+++ b/index-8.html
@@ -121,9 +121,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -236,9 +236,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -452,7 +452,7 @@
 				    					<img src="assets/images/services/style7/ser1.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Customize Your Store</a></h4>
+				    					<h4 class="title"><a href="#">Customize Your Store</a></h4>
 				    					<p class="services-txt">Velit officia consequat duis enim velit mollit.</p>
 				    				</div>
 			    				</div>
@@ -465,7 +465,7 @@
 				    					<img src="assets/images/services/style7/ser2.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Custom Domain</a></h4>
+				    					<h4 class="title"><a href="#">Custom Domain</a></h4>
 				    					<p class="services-txt">Velit officia consequat duis enim velit mollit.</p>
 				    				</div>
 			    				</div>
@@ -478,7 +478,7 @@
 				    					<img src="assets/images/services/style7/ser3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">SEO Tools</a></h4>
+				    					<h4 class="title"><a href="#">SEO Tools</a></h4>
 				    					<p class="services-txt">Velit officia consequat duis enim velit mollit.</p>
 				    				</div>
 			    				</div>
@@ -491,7 +491,7 @@
 				    					<img src="assets/images/services/style7/ser4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Secure Payments</a></h4>
+				    					<h4 class="title"><a href="#">Secure Payments</a></h4>
 				    					<p class="services-txt">Velit officia consequat duis enim velit mollit.</p>
 				    				</div>
 			    				</div>
@@ -907,7 +907,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -948,7 +948,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
