--- a/index-9.html
+++ b/index-9.html
@@ -121,9 +121,9 @@
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li><a href="services-details.html">Services Details</a></li>
+															        <li><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -236,9 +236,9 @@
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li><a href="services-details.html">Services Details</a></li>
+					    			        <li><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -568,7 +568,7 @@
 				    					<img src="assets/images/services/style7/ser5.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Encrypted With High Security</a></h4>
+				    					<h4 class="title"><a href="#">Encrypted With High Security</a></h4>
 				    				</div>
 			    				</div>
 			    			</div>
@@ -580,7 +580,7 @@
 				    					<img src="assets/images/services/style7/ser6.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Full HD Audio & Video Calling</a></h4>
+				    					<h4 class="title"><a href="#">Full HD Audio & Video Calling</a></h4>
 				    				</div>
 			    				</div>
 			    			</div>
@@ -592,7 +592,7 @@
 				    					<img src="assets/images/services/style7/ser7.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Not Limited By Time & Place</a></h4>
+				    					<h4 class="title"><a href="#">Not Limited By Time & Place</a></h4>
 				    				</div>
 			    				</div>
 			    			</div>
@@ -604,7 +604,7 @@
 				    					<img src="assets/images/services/style7/ser8.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-details.html">Compatible With Every Devices</a></h4>
+				    					<h4 class="title"><a href="#">Compatible With Every Devices</a></h4>
 				    				</div>
 			    				</div>
 			    			</div>
@@ -936,7 +936,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -977,7 +977,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
