--- a/partners.html
+++ b/partners.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<!-- Mirrored from rstheme.com/products/html/sasco/services-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jun 2024 15:53:50 GMT -->
+<!-- Mirrored from rstheme.com/products/html/sasco/# by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jun 2024 15:53:50 GMT -->
 
 <head>
 	<!-- meta tag -->
@@ -90,14 +90,17 @@
 														<a href="about.html" style="color:#fff;">About</a>
 													</li>
 													<li class="">
+														<a href="services.html" style="color:#fff;">Services</a>
+													</li>
+													<li class="">
 														<a href="partners.html" style="color:#fff;">Partners</a>
 													</li>
 													<li class="">
 														<a href="customers.html" style="color:#fff;">Customers</a>
 													</li>
-													<li class="last-item">
+													<!-- <li class="last-item">
 														<a href="contact.html" style="color:#fff;">Contact</a>
-													</li>
+													</li> -->
 												</ul> <!-- //.nav-menu -->
 											</nav> <!-- //.nav-menu -->
 										</nav>
@@ -108,8 +111,8 @@
 								<div class="expand-btn-inner">
 									<ul>
 										<li class="btn-signin">
-											<a class="signin-button" href="contact-1.html">
-												<span class="sign-text"><i class="ri-user-3-line"></i> Sign In </span>
+											<a class="signin-button" href="contact.html">
+												<span class="sign-text"><i class="ri-user-3-line"></i> Contact Us </span>
 											</a>
 										</li>
 										<li class="nav-link">
@@ -147,14 +150,17 @@
 							<a href="about.html">About</a>
 						</li>
 						<li class="">
+							<a href="services.html">Services</a>
+						</li>
+						<li class="">
 							<a href="partners.html">Partners</a>
 						</li>
 						<li class="">
 							<a href="customers.html">Customers</a>
 						</li>
-						<li class="last-item">
+						<!-- <li class="last-item">
 							<a href="contact.html">Contact</a>
-						</li>
+						</li> -->
 					</ul> <!-- //.nav-menu -->
 					<!-- //.nav-menu -->
 
@@ -162,8 +168,8 @@
 					<div class="canvas-contact">
 						<ul>
 							<li class="btn-signin">
-								<a class="signin-button" href="contact-1.html">
-									<span class="sign-text"><i class="ri-user-3-line"></i> Sign In </span>
+								<a class="signin-button" href="contact.html">
+									<span class="sign-text"><i class="ri-user-3-line"></i> Contact Us </span>
 								</a>
 							</li>
 							<!-- <li class="btn-quote">
@@ -302,7 +308,7 @@
 
 						<div class="services-item mb-30">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/1.png" alt="">
+								<img src="assets/images/Medscred Icons/Empanelment.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Empanelment</h2>
@@ -312,7 +318,7 @@
 						</div>
 						<div class="services-item mb-30">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/2.png" alt="">
+								<img src="assets/images/Medscred Icons/Claim Tracking.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Claims Tracking</h2>
@@ -322,7 +328,7 @@
 						</div>
 						<div class="services-item">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/3.png" alt="">
+								<img src="assets/images/Medscred Icons/Financing Support.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Financing Support</h2>
@@ -337,7 +343,7 @@
 								</div> -->
 						<div class="services-item mb-30">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/1.png" alt="">
+								<img src="assets/images/Medscred Icons/Documentation.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Documentation</h2>
@@ -347,7 +353,7 @@
 						</div>
 						<div class="services-item mb-30">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/2.png" alt="">
+								<img src="assets/images/Medscred Icons/Query Claim.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Claims & Query Support</h2>
@@ -358,7 +364,7 @@
 						</div>
 						<div class="services-item">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/3.png" alt="">
+								<img src="assets/images/Medscred Icons/Reimbursement.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Reimbursement Claims for your patients</h2>
@@ -387,10 +393,10 @@
 						<div class="services-item">
 							<div class="services-wrap">
 								<div class="services-icon">
-									<img src="assets/images/services/style7/ser1.png" alt="Images">
+									<img src="assets/images/Medscred Icons/Financing Solution.png" alt="Images">
 								</div>
 								<div class="services-content">
-									<h4 class="title"><a href="services-1.html">Financing Solution</a></h4>
+									<h4 class="title"><a href="#">Financing Solution</a></h4>
 									<p class="services-txt">We will take care of your and your patients financial needs
 									</p>
 								</div>
@@ -401,10 +407,10 @@
 						<div class="services-item">
 							<div class="services-wrap">
 								<div class="services-icon">
-									<img src="assets/images/services/style7/ser2.png" alt="Images">
+									<img src="assets/images/Medscred Icons/Claim Assistance.png" alt="Images">
 								</div>
 								<div class="services-content">
-									<h4 class="title"><a href="services-1.html">Claim Assistance</a></h4>
+									<h4 class="title"><a href="#">Claim Assistance</a></h4>
 									<p class="services-txt">Hassle free cashless insurance claims.</p>
 								</div>
 							</div>
@@ -414,10 +420,10 @@
 						<div class="services-item">
 							<div class="services-wrap">
 								<div class="services-icon">
-									<img src="assets/images/services/style7/ser3.png" alt="Images">
+									<img src="assets/images/Medscred Icons/Become a partner.png" alt="Images">
 								</div>
 								<div class="services-content">
-									<h4 class="title"><a href="services-1.html">Become a Partner</a></h4>
+									<h4 class="title"><a href="#">Become a Partner</a></h4>
 									<p class="services-txt">Become a partner now to grow your healthcare practice.</p>
 								</div>
 							</div>
@@ -430,7 +436,7 @@
 				    					<img src="assets/images/services/style7/ser4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-1.html">Secure payments</a></h4>
+				    					<h4 class="title"><a href="#">Secure payments</a></h4>
 				    					<p class="services-txt">Accumsan lacus vel facilisis volutpat velit egestas</p>
 				    				</div>
 			    				</div>
@@ -463,7 +469,7 @@
 
 						<div class="services-item mb-30">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/1.png" alt="">
+								<img src="assets/images/Medscred Icons/Easy Eligibility.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Easy Eligibility Criteria</h2>
@@ -472,7 +478,7 @@
 						</div>
 						<div class="services-item mb-30">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/2.png" alt="">
+								<img src="assets/images/Medscred Icons/Quick Approval.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Quick Approval</h2>
@@ -481,7 +487,7 @@
 						</div>
 						<div class="services-item">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/3.png" alt="">
+								<img src="assets/images/Medscred Icons/Paperless.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Paperless Process</h2>
@@ -496,7 +502,7 @@
 							</div> -->
 						<div class="services-item mb-30">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/1.png" alt="">
+								<img src="assets/images/Medscred Icons/Minimal Documentation.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Minimal documentation</h2>
@@ -505,7 +511,7 @@
 						</div>
 						<div class="services-item mb-30">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/2.png" alt="">
+								<img src="assets/images/Medscred Icons/Swift Processing.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Swift Processing</h2>
@@ -514,7 +520,7 @@
 						</div>
 						<div class="services-item">
 							<div class="services-icon">
-								<img src="assets/images/services/style11/icons/home1/3.png" alt="">
+								<img src="assets/images/Medscred Icons/Customer Services.png" alt="">
 							</div>
 							<div class="services-text">
 								<h2 class="title">Exceptional Customer Services</h2>
@@ -528,7 +534,7 @@
 		<!-- Services End -->
 
 		<!-- Features Start -->
-		<div class="rs-feature feature-style1 pt-140 pb-10 md-pt-80 md-pb-75">
+		<div class="rs-feature d-none feature-style1 pt-140 pb-10 md-pt-80 md-pb-75">
 			<div class="container">
 				<div class="row y-middle">
 					<div class="col-lg-6 md-mb-50">
@@ -724,14 +730,13 @@
 	<!-- Footer Start -->
 	<footer id="rs-footer" class="rs-footer footer-main-home footer-modify3">
 		<div class="container">
-			<div class="footer-top">
+			<div class="footer-top" style="padding-top: 50px!important;">
 				<div class="row">
 					<div class="col-lg-4 md-mb-20">
 						<div class="footer-logo">
 							<a href="index.html"><img src="assets/images/medscred blue.png" alt=""></a>
 						</div>
-						<p class="widget-desc">Welcome to MedsCred, where we envision empowering every patient in India
-							through a seamless healthcare journey.</p>
+						<p class="widget-desc">Welcome to MedsCred, where we envision empowering every patient in India through a seamless healthcare journey.</p>
 						<ul class="footer-social md-mb-30">
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -742,24 +747,25 @@
 					<div class="col-lg-8 pl-110 md-pl-15">
 						<div class="row">
 							<div class="col-lg-4 md-mb-10">
-								<h3 class="footer-title">About</h3>
+								<h3 class="footer-title">Pages</h3>
 								<ul class="site-map">
-									<li><a href="about-1.html">About</a></li>
-									<li><a href="services-details-2.html">Services</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="contact-1.html">Contact</a></li>
+									<li><a href="about.html">About</a></li>
+									<li><a href="services.html">Services</a></li>
+									<li><a href="partners.html">Partners</a></li>
+									<li><a href="customers.html">Customers</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</div>
-							<div class="col-lg-4 md-mb-10">
-								<h3 class="footer-title">Resources</h3>
+							<div class="col-lg-6 md-mb-10">
+								<h3 class="footer-title">Get in Touch</h3>
 								<ul class="site-map">
-									<li><a href="#">Product</a></li>
-									<li><a href="price-plan-2.html">Pricing Plan</a></li>
-									<li><a href="faqs.html">Faqs</a></li>
-									<li><a href="#">Help Center</a></li>
+									<li><a href="tel:+91 87808 62493">+91 87808 62493</a></li>
+									<li><a href="mailto:info@medscred.com">info@medscred.com</a></li>
+									<!-- <li><a href="faqs.html">Faqs</a></li> -->
+									<li><a>IHub 2nd floor - Prajna Puram, KCG Campus, opp. PRL, Navrangpura, Ahmedabad, Gujarat 380015</a></li>
 								</ul>
 							</div>
-							<div class="col-lg-4">
+							<!-- <div class="col-lg-4">
 								<h3 class="footer-title">Get apps On!</h3>
 								<ul class="textwidget-btn">
 									<li>
@@ -773,7 +779,7 @@
 										</a>
 									</li>
 								</ul>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
@@ -786,7 +792,7 @@
 						<div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
 							<ul class="copy-right-menu">
 								<li><a href="#">Privacy Policy</a></li>
-								<li><a href="#">Refund Policy</a></li>
+								<li><a href="#">Terms and Condition</a></li>
 							</ul>
 						</div>
 						<div class="col-lg-6">
@@ -853,6 +859,6 @@
 	<script src="assets/js/main.js"></script>
 </body>
 
-<!-- Mirrored from rstheme.com/products/html/sasco/services-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jun 2024 15:53:53 GMT -->
+<!-- Mirrored from rstheme.com/products/html/sasco/# by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jun 2024 15:53:53 GMT -->
 
 </html>
