--- a/services-details.html
+++ b/services-details.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx"> 
 	
-<!-- Mirrored from rstheme.com/products/html/sasco/services-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jun 2024 15:53:50 GMT -->
+<!-- Mirrored from rstheme.com/products/html/sasco/# by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jun 2024 15:53:50 GMT -->
 <head>
 		<!-- meta tag -->
 		<meta charset="utf-8">
@@ -123,9 +123,9 @@
 															<li class="last-item menu-item-has-children current-menu-item">
 															    <a href="#">Services</a>
 															    <ul class="sub-menu">
-															        <li><a href="services-1.html">Services 1</a></li>
+															        <li><a href="#">Services 1</a></li>
 															        <li><a href="services-2.html">Services 2</a></li>
-															        <li class="active"><a href="services-details.html">Services Details</a></li>
+															        <li class="active"><a href="#">Services Details</a></li>
 															    </ul>
 															</li>
 															<li><a href="testimonial.html">Testimonial</a></li>  
@@ -238,9 +238,9 @@
 					    			<li class="last-item menu-item-has-children current-menu-item">
 					    			    <a href="#">Services</a>
 					    			    <ul class="sub-menu">
-					    			        <li><a href="services-1.html">Services 1</a></li>
+					    			        <li><a href="#">Services 1</a></li>
 					    			        <li><a href="services-2.html">Services 2</a></li>
-					    			        <li class="active"><a href="services-details.html">Services Details</a></li>
+					    			        <li class="active"><a href="#">Services Details</a></li>
 					    			    </ul>
 					    			</li>
 					    			<li><a href="testimonial.html">Testimonial</a></li>  
@@ -408,7 +408,7 @@
 				    					<img src="assets/images/services/style7/ser1.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-1.html">Customize Your Store</a></h4>
+				    					<h4 class="title"><a href="#">Customize Your Store</a></h4>
 				    					<p class="services-txt">Accumsan lacus vel facilisis volutpat velit egestas</p>
 				    				</div>
 			    				</div>
@@ -421,7 +421,7 @@
 				    					<img src="assets/images/services/style7/ser2.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-1.html">Custom domain</a></h4>
+				    					<h4 class="title"><a href="#">Custom domain</a></h4>
 				    					<p class="services-txt">Accumsan lacus vel facilisis volutpat velit egestas</p>
 				    				</div>
 			    				</div>
@@ -434,7 +434,7 @@
 				    					<img src="assets/images/services/style7/ser3.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-1.html">SEO Tools</a></h4>
+				    					<h4 class="title"><a href="#">SEO Tools</a></h4>
 				    					<p class="services-txt">Accumsan lacus vel facilisis volutpat velit egestas</p>
 				    				</div>
 			    				</div>
@@ -447,7 +447,7 @@
 				    					<img src="assets/images/services/style7/ser4.png" alt="Images">
 				    				</div>
 				    				<div class="services-content">
-				    					<h4 class="title"><a href="services-1.html">Secure payments</a></h4>
+				    					<h4 class="title"><a href="#">Secure payments</a></h4>
 				    					<p class="services-txt">Accumsan lacus vel facilisis volutpat velit egestas</p>
 				    				</div>
 			    				</div>
@@ -673,7 +673,7 @@
 									<h3 class="footer-title">About</h3>
 									<ul class="site-map">
 		                                <li><a href="about-1.html">About</a></li>
-		                                <li><a href="services-details-2.html">Services</a></li>
+		                                <li><a href="services.html">Services</a></li>
 		                                <li><a href="blog.html">Blog</a></li>
 		                                <li><a href="contact-1.html">Contact</a></li>
 		                            </ul>
@@ -714,7 +714,7 @@
                     	    <div class="col-lg-6 md-mb-10 text-lg-end text-center order-last">
                     	        <ul class="copy-right-menu">
                     	            <li><a href="#">Privacy Policy</a></li>
-                    	            <li><a href="#">Refund Policy</a></li>
+                    	            <li><a href="#">Terms and Condition</a></li>
                     	        </ul>
                     	    </div>
                     	    <div class="col-lg-6">
@@ -781,5 +781,5 @@
 		<script src="assets/js/main.js"></script>
 	</body>
 
-<!-- Mirrored from rstheme.com/products/html/sasco/services-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jun 2024 15:53:53 GMT -->
+<!-- Mirrored from rstheme.com/products/html/sasco/# by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jun 2024 15:53:53 GMT -->
 </html>
